--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "@types/leaflet": "^1.9.21",
     "framer-motion": "^12.26.2",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^4.0.0",
     "leaflet": "^1.9.4",
     "leaflet-routing-machine": "^3.2.12",
     "lodash": "^4.17.21",
